--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,67 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winit = "^0.20.0-alpha5"
-glutin = "^0.22.0-alpha5"
+#winit = "^0.20.0-alpha5"
+#glutin = "^0.22.0-alpha5"
 glow = "^0.3.0-alpha4"
 
+[dependencies.winit]
+git = "https://github.com/katyo/winit"
+branch = "android"
+
+[dependencies.glutin]
+git = "https://github.com/katyo/glutin"
+branch = "android"
+
 [patch.crates-io]
+#winit = { git = "https://github.com/rust-windowing/winit" }
+#winit = { git = "https://github.com/dvc94ch/winit", branch = "android" }
+#android_glue = { git = "https://github.com/rust-windowing/android-rs-glue" }
+#android-ndk = { git = "https://github.com/rust-windowing/android-ndk-rs" }
+#android-ndk-sys = { git = "https://github.com/rust-windowing/android-ndk-rs" }
+
+[package.metadata.android]
+android_version = 28
+target_sdk_version = 28
+min_sdk_version = 16
+#build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
+build_targets = ["armv7-linux-androideabi"]
+package_name = "org.illumium.pianino"
+label = "Piano playing trainer"
+version_code = 100
+version_name = "0.1.0"
+res = "res"
+icon = "@mipmap/ic_launcher"
+assets = "assets"
+fullscreen = false
+opengles_version_major = 2
+opengles_version_minor = 0
+
+[package.metadata.android.application_attributes]
+"android:debuggable" = "true"
+"android:hardwareAccelerated" = "true"
+
+[package.metadata.android.activity_attributes]
+"android:screenOrientation" = "unspecified"
+"android:uiOptions" = "none"
+
+[[package.metadata.android.feature]]
+name = "android.hardware.audio.output"
+required = false
+
+[[package.metadata.android.feature]]
+name = "android.hardware.microphone"
+required = false
+
+[[package.metadata.android.feature]]
+name = "android.hardware.audio.low_latency"
+required = false
+
+[[package.metadata.android.permission]]
+name = "android.permission.WRITE_EXTERNAL_STORAGE"
+max_sdk_version = 18
+#required = false
+
+[[package.metadata.android.permission]]
+name = "android.permission.RECORD_AUDIO"
+#required = false
