--- a/sgl/Cargo.toml
+++ b/sgl/Cargo.toml
@@ -11,6 +11,18 @@ edition = "2018"
 [dependencies]
 glow = "^0.4.0"
 
+[dependencies.glam]
+version = "^0.8.5"
+optional = true
+
+[dependencies.stretch]
+version = "^0.3.2"
+optional = true
+
+[dependencies.colours]
+version = "^0.1.0"
+optional = true
+
 [features]
 default = ["web-sys"]
 stdweb = ["glow/stdweb"]
