--- a/sgl/Cargo.toml
+++ b/sgl/Cargo.toml
@@ -8,8 +8,8 @@ authors = ["K. <kayo@illumium.org>"]
 license = "MIT"
 edition = "2018"
 
-[dependencies]
-glow = "^0.4.0"
+[dependencies.glow]
+version = "^0.4.0"
 
 [dependencies.glam]
 version = "^0.8.5"
